# BB2-Robot-Practice-Code

./: .deploy_cfg  README.md  imgui.ini  notes.md  pyproject.toml  robot.py  simgui-ds.json  simgui-window.json  testing.py
command/: __init__.py  shooter.py  shooter_commands.py
commands/: drive.py  drivetrain.py  shooter.py
oi/: OI.py  controller.py  keymap.py
subsystem/: __init__.py  shooter.py
subsystems/: drivetrain.py  limelight.py  shooter.py
toolkit/: __init__.py  conversions.py
