[tool.poetry]
name = "bb2-robot-practice-code"
version = "0.1.0"
description = ""
authors = ["ethan <ethan.chapman0@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robotpy = {extras = ["ctre", "commands2", "rev"], version = "^2022.0.30"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"